--- a/cennik.html
+++ b/cennik.html
@@ -35,7 +35,8 @@
                 <td>50 szt.</td>
                 <td>15 szt.</td>
                 <td>tylko 1</td>
-                <td rowspan="2">wyprzedane</td>
+                <td>wyprzedane</td>
+                <td>43 szt.</td>
             </tr>
         </table>    
     </div>
