--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p class="heading">Misie pysie</p>
-    <p class="desc">Najlepsza strona dla fanatyków misiów pysiów. Enjoy!!!</p>
+    <p class="desc">Najlepsza strona dla fanatyków misiów pysiów</p>
 
     <div class="container">
         <div class="nav">
