--- a/rodzaje.html
+++ b/rodzaje.html
@@ -29,7 +29,7 @@
         <div class="box">
             <a href="https://youtu.be/dQw4w9WgXcQ?si=QWfGpuJy_p-T7aIi">
                 <p class="boxtxt">Michał Miś</p>
-                <img class="thumbnail" src="zdjecia/uwumichał.png">
+                <img class="thumbnail" src="zdjecia/uwumichal2.png">
             </a>
         </div>
 
