--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="nav">
-            Podstrony: <br/> <ul><li><a href="rodzaje.html">Rodzaje misi</a></li><li><a href="cennik.html">Cennik misi</a></li><li><a href="ciekawostki.html">Ciekawostki</a></li></ul>
+            Podstrony: <br/> <ul><li><a class="navlink" href="rodzaje.html">Rodzaje misi</a></li><li><a class="navlink" href="cennik.html">Cennik misi</a></li><li><a class="navlink" href="ciekawostki.html">Ciekawostki</a></li></ul>
         </div>
         <div class="content"><img class="banner" src="zdjecia/baner1.jpg"></div>
     </div>
