--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <div class="nav">
             Podstrony: <br/> <ul><li><a class="navlink" href="rodzaje.html">Rodzaje misi</a></li><li><a class="navlink" href="cennik.html">Cennik misi</a></li><li><a class="navlink" href="ciekawostki.html">Ciekawostki</a></li></ul>
         </div>
-        <div class="content"><img class="banner" src="zdjecia/baner1.jpg"></div>
+        <img class="banner" src="zdjecia/baner1.jpg">
+        <img class="gif" src="zdjecia/miscute.GIF">
     </div>
 </body>
 </html>
