--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="nav">
-            Podstrony: <br/> <ul><li><a class="navlink" href="rodzaje.html">Rodzaje misi</a></li><li><a class="navlink" href="cennik.html">Cennik misi</a></li><li><a class="navlink" href="ciekawostki.html">Ciekawostki</a></li></ul>
+            Podstrony: <br/> <ul><li><a class="navlink" href="rodzaje.html">Rodzaje <br> misi</a></li><li><a class="navlink" href="cennik.html">Cennik <br> misi <br> </a></li><li><a class="navlink" href="ciekawostki.html">Ciekawostki</a></li></ul>
         </div>
         <img class="banner" src="zdjecia/baner1.jpg">
         <img class="gif" src="zdjecia/miscute.GIF">
